--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,43 +17,16 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <% if @book.favorited_by?(current_user) %>
-            <td>
-              <%= link_to book_favorites_path(@book), method: :delete do %>
-                ♥<%= @book.favorites.count %>
-              <% end %>
-            </td>
-          <% else %>
-            <td>
-              <%= link_to book_favorites_path(@book), method: :post do %>
-                ♡<%= @book.favorites.count %>
-              <% end %>
-            </td>
-          <% end %>
-          <td>コメント件数:<%= @book.book_comments.count %></td>
+          <td><%= render "favorites/btn", book: @book %></td>
+          <td>コメント数: <%= @book.book_comments.count %></td>
           <%  if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
       </table>
-      <table class="table">
-        <tr>
-          <% @book.book_comments each do |book_comment| %>
-            <td><%= image_tag book_comment.user.get_profile_image, size:'50x50' %></td>
-            <%= book_comment.user.name %>
-          <% end %>
-          <% if book_comment.user == current_user %>
-            <td><%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class:"btn btn-sm btn-danger" %></td>
-          <% end %>
-        </tr>
-      </table>
-      <div>
-        <%= form_with model: [@book, @book_comment] do |f| %>
-          <%= f.text_area :comment %><br>
-          <%= f.submit "送信" %>
-        <% end %>
-      </div>
+      <%= render "book_comments/index", book: @book %>
+      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
     </div>
   </div>
 </div>
