--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -3,7 +3,10 @@
     <tr>
       <th>image</th>
       <th>name</th>
-      <th colspan="3"></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -13,7 +16,7 @@
         <td><%= user.name %></td>
         <td>フォロー数:<%= user.followings.count %></td>
         <td>フォロワー数:<%= user.followers.count %></td>
-        <td><%= render "relationships/btn", user: user, options: { class: "follow-link" } %></td>
+        <td><%= render "relationships/btn", user: user %></td>
         <td><%= link_to 'Show', user %></td>
       </tr>
     <% end %>
