--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,15 +17,21 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td><%= render "favorites/btn", book: @book %></td>
-          <td>コメント数: <%= @book.book_comments.count %></td>
+          <td id="favorite-btn">
+            <%= render "favorites/favorite-btn", book: @book %>
+          </td>
+          <td id="comment_counter">
+            <%= render "book_comments/counter", book: @book %>
+          </td>
           <%  if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
       </table>
-      <%= render "book_comments/index", book: @book %>
+      <div id="comment_index">
+        <%= render "book_comments/index", book: @book %>
+      </div>
       <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
     </div>
   </div>
