--- a/app/views/book_comments/_form.html.erb
+++ b/app/views/book_comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model:[book, book_comment], local: false) do |f| %>
-  <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに", class: "w-100", id: "comment_textarea" %>
+<%= form_with model:[@book, @book_comment], local: false do |f| %>
+  <%= f.text_area :comment, size:"90x5" %>
   <%= f.submit "送信" %>
 <% end %>
