--- a/app/views/book_comments/destroy.js.erb
+++ b/app/views/book_comments/destroy.js.erb
@@ -1,2 +1,3 @@
-$('#comment_counter').html("<%= escape_javascript(render partial: 'book_comments/counter', locals: {book: @comment.book}) %>");
-$('#comment_index').html("<%= escape_javascript(render partial: 'book_comments/index', locals: {book: @comment.book}) %>");
+$("#book_<%= @book.id %> .comments-count").html("コメント数: <%= @book.book_comments.count %>");
+$(".book_comments").html("<%= j(render 'book_comments/index', book: @book) %>");
+$("#book_comment_comment").val("");
