--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,7 @@
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
   		<table class='table'>
-  		  <tr>
+  		  <tr id="book_<%= @book.id %>">
           <td><%= link_to(@book.user) do %>
             <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
             <%= @book.user.name %>
@@ -17,11 +17,11 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td id="favorite-btn">
+          <td class="favorite-btn">
             <%= render "favorites/favorite-btn", book: @book %>
           </td>
-          <td id="comment_counter">
-            <%= render "book_comments/counter", book: @book %>
+          <td class="comments-count">
+            コメント数: <%= @book.book_comments.count %>
           </td>
           <%  if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -29,10 +29,10 @@
           <% end %>
         </tr>
       </table>
-      <div id="comment_index">
+      <table class="book_comments">
         <%= render "book_comments/index", book: @book %>
-      </div>
-      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
+      </table>
+        <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
     </div>
   </div>
 </div>
