--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,6 +23,7 @@
           <td class="comments-count">
             コメント数: <%= @book.book_comments.count %>
           </td>
+          <td>閲覧数：<%= @book.read_counts.count %></td>
           <%  if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
