--- a/app/views/users/_book_graph.html.erb
+++ b/app/views/users/_book_graph.html.erb
@@ -1,30 +1,28 @@
-<h2>7日分の投稿数</h2>
-<div class="table_width">
-  <table class="table-bordered">
-    <thead>
-      <tr>
-        <th>6日前</th>
-        <th>5日前</th>
-        <th>4日前</th>
-        <th>3日前</th>
-        <th>2日前</th>
-        <th>1日前</th>
-        <th>今日</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><%= books.created_6day_ago.count %></td>
-        <td><%= books.created_5day_ago.count %></td>
-        <td><%= books.created_4day_ago.count %></td>
-        <td><%= books.created_3day_ago.count %></td>
-        <td><%= books.created_2day_ago.count %></td>
-        <td><%= books.created_yesterday.count %></td>
-        <td><%= books.created_today.count %></td>
-      </tr>
-    </tbdy>
-  </table>
-</div>
+<h4>7日分の投稿数</h4>
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>6日前</th>
+      <th>5日前</th>
+      <th>4日前</th>
+      <th>3日前</th>
+      <th>2日前</th>
+      <th>1日前</th>
+      <th>今日</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><%= books.created_6day_ago.count %></td>
+      <td><%= books.created_5day_ago.count %></td>
+       <td><%= books.created_4day_ago.count %></td>
+      <td><%= books.created_3day_ago.count %></td>
+      <td><%= books.created_2day_ago.count %></td>
+      <td><%= books.created_yesterday.count %></td>
+      <td><%= books.created_today.count %></td>
+    </tr>
+  </tbdy>
+</table>
 
 <canvas id="myLineChart"></canvas>
 <script>
