--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,15 @@
       <%= render 'books/index',books: @books %>
       <%= render 'book_index', books: @books %>
       <%= render 'book_graph', books: @books %>
+      <%= form_with url:user_search_path(@user), method: :get, local: false do|f| %>
+        <%= f.date_field :created_at %>
+        <%= f.submit "検索", class: "btn btn-primary" %>
+      <% end %>
+      <div id="search_result">
+        <% if @search_book.present? %>
+          <%= render 'search', search_book: @search_book %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
