--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,7 +1,9 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
+      <h2>User info</h2>
       <%= render "users/info", user: @user %>
+      <h2 class="mt-3">New book</h2>
       <%= render "books/form", book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
@@ -12,6 +14,7 @@
             <th></th>
             <th>グループ名</th>
             <th>紹介文</th>
+            <th>メンバー</th>
             <th colspan="3"></th>
           </tr>
         </thead>
@@ -27,8 +30,17 @@
             <td><%= @group.name %></td>
             <td><%= @group.introduction %></td>
             <td>
-              <% if @group.owner_id == current_user.id %>
+              <% @group.users.each do |user| %>
+                <li style="list-style: none;"><%= user.name %></li>
+              <% end %>
+            </td>
+            <td>
+              <% if @group.is_owned_by?(current_user) %>
                 <%= link_to "Edit", edit_group_path(@group), class: "btn btn-success" %>
+              <% elsif @group.includesUser?(current_user) %>
+                <%= link_to "Leve this group", group_group_users_path(@group), method: :delete, class: "btn btn-sm btn-danger" %>
+              <% else %>
+                <%= link_to "Join this group", group_group_users_path(@group), method: :post, class: "btn btn-sm btn-success" %>
               <% end %>
             </td>
           </tr>
