--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -17,6 +17,11 @@
     <td><%= link_to user.followers.count, user_followers_path(user) %></td>
   </tr>
 </table>
+<% unless user.guest_user? %>
+  <div class="row">
+    <%= link_to "", edit_user_path(user), class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+  </div>
+<% end %>
 <div class="row">
   <% if current_user != user %>
     <td><%= render "relationships/btn", user: user %></td>
