--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -37,6 +37,7 @@
             <td>
               <% if @group.is_owned_by?(current_user) %>
                 <%= link_to "Edit", edit_group_path(@group), class: "btn btn-success" %>
+                <%= link_to 'Notice an Event',group_new_mail_path(@group), class: "btn btn-sm btn-info" %>
               <% elsif @group.includesUser?(current_user) %>
                 <%= link_to "Leve this group", group_group_users_path(@group), method: :delete, class: "btn btn-sm btn-danger" %>
               <% else %>
