メール送信機能修正

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -19,19 +19,12 @@
 </table>
 <% unless user.guest_user? %>
   <div class="row">
-    <%= link_to "", edit_user_path(user), class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+    <%= link_to "",edit_user_path(user),class: "btn btn-outline-secondary btn-block fa-solid fa-user edit_user_#{user.id}" %>
   </div>
 <% end %>
-<div class="row">
-  <% if current_user != user %>
-    <td><%= render "relationships/btn", user: user %></td>
-  <% else %>
-    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-      <i class="fas fa-user-cog"></i>
-    <% end %>
-  <% end %>
-  <% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
-    <%= link_to "chatを始める", chat_path(user.id), class: "ml-3" %>
-  <% end %>
-</div>
+
+<% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
+  <%= link_to "chatを始める", chat_path(user.id), class: "ml-3" %>
+<% end %>
+
 
