星レビュー実装

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,6 +23,9 @@
           <td class="comments-count">
             コメント数: <%= @book.book_comments.count %>
           </td>
+          <td>
+            <%= render "static_rate", book: @book %>
+          </td>
           <td>閲覧数：<%= @book.read_counts.count %></td>
           <%  if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
