--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -10,20 +10,21 @@
 
   <% if book.id.nil? %>
     <div class="form-group" id="star">
-      <%= f.label :Rate %>
-      <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
+      <%= f.label :rate %>
+      <%= f.hidden_field :rate, id: :review_star, class: 'form-control' %>
       <div id="post_raty"></div>
     </div>
     <script>
-      $(document).on('tubolinks:load', function() {
+      $(document).on('turbolinks:load', function() {
         let elem = document.querySelector('#post_raty');
         if (elem == null) return;
+
         elem.innerHTML = ""
         let opt = {
           starOn: "<%= asset_path('star-on.png') %>",
           starOff: "<%= asset_path('star-off.png') %>",
           starHalf: "<%= asset_path('star-half.png') %>",
-          scoreName: 'book[star]',
+          scoreName: 'book[rate]',
         };
         raty(elem, opt);
       });
@@ -33,6 +34,7 @@
       <%= render "static_rate", book: book %>
     </div>
   <% end %>
+
   <div class="form-group">
     <%= f.submit class: 'btn btn-success' %>
   </div>
