--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,6 +20,7 @@
           <%= render "favorites/favorite-btn", book: book %>
         </td>
         <td class="comments-count">コメント数: <%= book.book_comments.count %></td>
+        <td><%= render "books/static_rate", book: book %></td>
         <td>閲覧数：<%= book.read_counts.count %></td>
       </tr>
     <% end %>
