--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -36,6 +36,11 @@
   <% end %>
 
   <div class="form-group">
+    <%= f.label :tag %>
+    <%= f.text_field :tag, class:"form-control book_tag" %>
+  </div>
+
+  <div class="form-group">
     <%= f.submit class: 'btn btn-success' %>
   </div>
 <% end %>
