--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,7 +4,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
-      <th colspan="3"></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
   <tbody>
@@ -16,6 +16,11 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td>
+          <% if book.tag.present? %>
+            <%= link_to book.tag, tagsearches_search_path(content:book.tag) %>
+          <% end %>
+        </td>
         <td class="favorite-btn">
           <%= render "favorites/favorite-btn", book: book %>
         </td>
