--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,12 @@
       <main>
         <p id="notice"><%= notice %></p>
         <div class="d-flex justify-content-center mb-2">
-         <%= render 'searches/form' %>
+          <% if user_signed_in? %>
+          <%= render 'searches/form' %>
+          <%= render 'tagsearches/form' %>
+          <% end %>
         </div>
+
         <%= yield %>
       </main>
     <%= render 'layouts/footer' %>
